Modified the layout of index page, deleted pagenate

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ description: Shoya Ishimaru (shoya140)'s weblog about his input/output.
 
 <div class="index-content">
   <div class="wrapper">
-    <div class="wrapper-inside" style="background-color:transparent;>
-      <ul id="hexGrid" style="padding-bottom: 100px;">
+    <div class="wrapper-inside" style="background-color:transparent; padding-right:10px; padding-left: 10px;">
+      <ul id="hexGrid">
         <li class="hex"></li>
         <li class="hex"></li>
         <li class="hex">
