Removed fade animations for hovering hexagons

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: Shoya Ishimaru (shoya140)'s weblog about his input/output.
 
 <div class="index-content">
   <div class="wrapper">
-    <div class="wrapper-inside" style="background-color:transparent; padding-right:10px; padding-left: 10px;">
+    <div class="wrapper-inside" style="background-color:transparent;">
       <ul id="hexGrid">
         <li class="hex"></li>
         <li class="hex"></li>
