Updated the style of index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ description: Shoya Ishimaru (shoya140)'s weblog about his input/output.
   <p class="text-dense"><b>Shoya Ishimaru</b> is a researcher working in Germany. [<a href="/aboutme/">about me</a>]
 </div>
 <div class="index-right">
-  <h3>RECENT BLOG POSTS (JP)</h3>
+  <h3 class="index-title">RECENT BLOG POSTS (JP)</h3>
   {% for post in site.posts limit:3 %}
   <div class="post-list-item">
       <a href="{{ post.url | prepend: site.baseurl }}"></a>
@@ -20,10 +20,10 @@ description: Shoya Ishimaru (shoya140)'s weblog about his input/output.
 {% endfor %}
 </div>
 <div style="text-align: center; margin-top: 5px;">
-  <div class="page-button" style="width:94%;"><a href="/blog/"></a> more blog posts <span class="lsf">right</span></div>
+  <div class="page-button" style="width:94%;"><a href="/blog/"></a> View more posts <span class="lsf">right</span></div>
 </div>
 
-<h3>ACTIVE RESEARCH PROJECTS</h2>
+<h3 class="index-title">ACTIVE RESEARCH PROJECTS</h2>
 <div class="index-left">
   <img src="https://dl.dropboxusercontent.com/u/12208857/img/thumbnail_textbook.png" class="image-on-frame-index">
 </div>
@@ -49,10 +49,10 @@ description: Shoya Ishimaru (shoya140)'s weblog about his input/output.
 </div>
 
 <div style="text-align: center; margin-top: 5px;">
-<div class="page-button" style="width: 94%;"><a href="/publications/"></a> all publications <span class="lsf">right</span></div>
+<div class="page-button" style="width: 94%;"><a href="/publications/"></a> View all publications <span class="lsf">right</span></div>
 </div>
 
-<h3>ACTIVE HOBBY PROJECTS</h2>
+<h3 class="index-title">ACTIVE HOBBY PROJECTS</h2>
 <div class="index-left">
   <img src="https://dl.dropboxusercontent.com/u/12208857/img/Paletta-feature_red.png" class="image-on-frame-index">
 </div>
@@ -69,5 +69,5 @@ description: Shoya Ishimaru (shoya140)'s weblog about his input/output.
 </div>
 
 <div style="text-align: center; margin-top: 5px;">
-<div class="page-button" style="width: 94%;"><a href="/tag/ReleaseNote/"></a> all hobby projects <span class="lsf">right</span></div>
+<div class="page-button" style="width: 94%;"><a href="/tag/ReleaseNote/"></a> View all hobby projects <span class="lsf">right</span></div>
 </div>
