--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ description: Shoya Ishimaru (@shoya140)'s weblog about his input/output.
 </div>
 <div class="index-right">
   <p class="text-dense"><b>Eyewear Computing</b><br>
-  The appearance of eyewear computers like Google Glass and JINS MEME enables a new era of activity recognition. They have unique sensors monitoring head motions and eye movements, and designed for every day use. We have developed the daily readig activity tracker (Wordometer, 万語計) and some interactions including Blinky-Bird.
+  The appearance of eyewear computers like Google Glass and JINS MEME enables a new era of activity recognition. They have unique sensors monitoring head motions and eye movements, and designed for everyday use. We have developed the daily reading activity tracker (Wordometer, 万語計) and some interactions including Blinky-Bird.
   </p>
 </div>
 <div class="index-left">
@@ -44,7 +44,7 @@ description: Shoya Ishimaru (@shoya140)'s weblog about his input/output.
 </div>
 <div class="index-right">
   <p class="text-dense"><b>Shin' on kei (心温計)</b><br>
-  Mental illness, especially depression is one of the most pressing concerns all over the world. Shin' on kei is the mental state estimating system by a user’s activity log derived from wearable devices. It use the analogy of thermometer for the visualization because everyone should have gone through hardships with fever, and they can understand how much tired the patient is by this format.
+  Mental illness, especially depression is one of the most pressing concerns all over the world. Shin' on kei is the mental state estimating system by a user’s activity log derived from wearable devices. It uses the analogy of thermometer for the visualization because everyone should have gone through hardships with fever, and they can understand how much tired the patient is by this format.
   </p>
 </div>
 
@@ -58,7 +58,7 @@ description: Shoya Ishimaru (@shoya140)'s weblog about his input/output.
 </div>
 <div class="index-right">
   <p class="text-dense"><b>Paletta</b><br>
-  Paletta is a tool to explore colors for developing Apps. By just clicking the color which is close to one on your mind, it recommend you more natural colors on the basis of the balance of hue, saturation, and brightness. [<a href="http://paletta.mrk1869.com/">more</a>]</p>
+  Paletta is a tool to explore colors for developing Apps. By just clicking the color which is close to one on your mind, it recommends you more natural colors on the basis of the balance of hue, saturation, and brightness. [<a href="http://paletta.mrk1869.com/">more</a>]</p>
 </div>
 <div class="index-left">
   <img src="/assets/img/thumbnail_spammuseum.png" class="image-on-frame-index">
