--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ description: Shoya Ishimaru (@shoya140)'s weblog about his input/output.
 ---
 
 <div class="index-left">
-  <img src="/assets/img/icon_dot.png" class="index-icon">
-  <p class="text-dense"><b>Shoya Ishimaru</b> is a researcher working in Germany. [<a href="/aboutme/">about me</a>]
+  <img src="/assets/img/icon_dot.png" class="index-icon" />
+  <p class="text-dense"><b>Shoya Ishimaru</b> is a researcher working in Germany. [<a href="/aboutme/">about me</a>]</p>
 </div>
 <div class="index-right">
   <h3 class="index-title">RECENT BLOG POSTS (JP)</h3>
@@ -23,27 +23,27 @@ description: Shoya Ishimaru (@shoya140)'s weblog about his input/output.
   <div class="page-button" style="width:94%;"><a href="/blog/"></a> View more posts <span class="lsf">right</span></div>
 </div>
 
-<h3 class="index-title">ACTIVE RESEARCH PROJECTS</h2>
+<h3 class="index-title">ACTIVE RESEARCH PROJECTS</h3>
 <div class="index-left">
-  <img src="/assets/img/thumbnail_textbook.png" class="image-on-frame-index">
+  <img src="/assets/img/thumbnail_textbook.png" class="image-on-frame-index" />
 </div>
 <div class="index-right">
-  <p class="text-dense"><b>Intelligent Textbook</b><br>
+  <p class="text-dense"><b>Intelligent Textbook</b><br/>
   Reading a textbook is an important way to obtain new knowledge. However, students often avert their eyes from reading a textbook because it is static and boring. We are currently developing an intelligent textbook which displays descriptions and representations dynamically according to cognitive states of a reader (e.g., attention, understanding, concentration, workload) measured by eye movements.</p>
 </div>
 <div class="index-left">
-  <img src="/assets/img/thumbnail_memelogger.png" class="image-on-frame-index">
+  <img src="/assets/img/thumbnail_memelogger.png" class="image-on-frame-index" />
 </div>
 <div class="index-right">
-  <p class="text-dense"><b>Eyewear Computing</b><br>
+  <p class="text-dense"><b>Eyewear Computing</b><br/>
   The appearance of eyewear computers like Google Glass and JINS MEME enables a new era of activity recognition. They have unique sensors monitoring head motions and eye movements, and designed for everyday use. We have developed the daily reading activity tracker (Wordometer, 万語計) and some interactions including Blinky-Bird.
   </p>
 </div>
 <div class="index-left">
-  <img src="/assets/img/thumbnail_shinonkei.jpg" class="image-on-frame-index">
+  <img src="/assets/img/thumbnail_shinonkei.jpg" class="image-on-frame-index" />
 </div>
 <div class="index-right">
-  <p class="text-dense"><b>Shin' on kei (心温計)</b><br>
+  <p class="text-dense"><b>Shin' on kei (心温計)</b><br/>
   Mental illness, especially depression is one of the most pressing concerns all over the world. Shin' on kei is the mental state estimating system by a user’s activity log derived from wearable devices. It uses the analogy of thermometer for the visualization because everyone should have gone through hardships with fever, and they can understand how much tired the patient is by this format.
   </p>
 </div>
@@ -52,19 +52,19 @@ description: Shoya Ishimaru (@shoya140)'s weblog about his input/output.
 <div class="page-button" style="width: 94%;"><a href="/publications/"></a> View all publications <span class="lsf">right</span></div>
 </div>
 
-<h3 class="index-title">ACTIVE HOBBY PROJECTS</h2>
+<h3 class="index-title">ACTIVE HOBBY PROJECTS</h3>
 <div class="index-left">
-  <img src="/assets/img/thumbnail_paletta.png" class="image-on-frame-index">
+  <img src="/assets/img/thumbnail_paletta.png" class="image-on-frame-index" />
 </div>
 <div class="index-right">
-  <p class="text-dense"><b>Paletta</b><br>
+  <p class="text-dense"><b>Paletta</b><br/>
   Paletta is a tool to explore colors for developing Apps. By just clicking the color which is close to one on your mind, it recommends you more natural colors on the basis of the balance of hue, saturation, and brightness. [<a href="http://paletta.mrk1869.com/">more</a>]</p>
 </div>
 <div class="index-left">
-  <img src="/assets/img/thumbnail_spammuseum.png" class="image-on-frame-index">
+  <img src="/assets/img/thumbnail_spammuseum.png" class="image-on-frame-index" />
 </div>
 <div class="index-right">
-  <p class="text-dense"><b>SPAM MUSEUM</b><br>
+  <p class="text-dense"><b>SPAM MUSEUM</b><br/>
   SPAM MUSEM is a web site collecting funny spam e-mails in Japan. We developed the web site with the concept based on the idea of changing annoying (メイワク) to laughable (ワクワク). [<a href="http://meiwaku.me">more</a>]</p>
 </div>
 
