--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@ description: Shoya Ishimaru (@shoya140)'s weblog about his input/output.
 
 <div class="index-left">
   <img src="/assets/img/icon_dot.png" class="index-icon" />
-  <p class="text-dense"><b>Shoya Ishimaru</b> is a researcher working in Germany. [<a href="/aboutme/">about me</a>]</p>
+  <p class="text-dense index-intro"><b>Shoya Ishimaru</b> is a researcher working in Germany. [<a href="/aboutme/">about me</a>]</p>
 </div>
 <div class="index-right">
-  <h3 class="index-title">RECENT BLOG POSTS (JP)</h3>
+  <h2 class="index-title">RECENT BLOG POSTS (JP)</h2>
   {% for post in site.posts limit:3 %}
   <div class="post-list-item">
       <a href="{{ post.url | prepend: site.baseurl }}"></a>
@@ -23,7 +23,7 @@ description: Shoya Ishimaru (@shoya140)'s weblog about his input/output.
   <div class="page-button" style="width:94%;"><a href="/blog/"></a> View more posts <span class="lsf">right</span></div>
 </div>
 
-<h3 class="index-title">ACTIVE RESEARCH PROJECTS</h3>
+<h2 class="index-title">ACTIVE RESEARCH PROJECTS</h2>
 <div class="index-left">
   <img src="/assets/img/thumbnail_textbook.png" class="image-on-frame-index" />
 </div>
@@ -52,7 +52,7 @@ description: Shoya Ishimaru (@shoya140)'s weblog about his input/output.
 <div class="page-button" style="width: 94%;"><a href="/publications/"></a> View all publications <span class="lsf">right</span></div>
 </div>
 
-<h3 class="index-title">ACTIVE HOBBY PROJECTS</h3>
+<h2 class="index-title">ACTIVE HOBBY PROJECTS</h2>
 <div class="index-left">
   <img src="/assets/img/thumbnail_paletta.png" class="image-on-frame-index" />
 </div>
